--- a/codigo/raphael_thierry_coelho/cartao.html
+++ b/codigo/raphael_thierry_coelho/cartao.html
@@ -9,13 +9,14 @@
 <body>
     <h1>Pagamento com Cartão</h1>
     <form id="form-cartao">
-        <textarea name="valor" required placeholder="Valor"></textarea><br>
-        <textarea name="titular" required placeholder="Titular"></textarea><br>
-        <textarea name="cpf" required placeholder="CPF"></textarea><br>
-        <textarea name="num-cartao" required placeholder="Número do Cartão"></textarea><br>
-        <textarea name="validade" required placeholder="Validade"></textarea><br>
-        <textarea name="cvv" required placeholder="CVV"></textarea><br>
+        <input type="number" name="valor" required placeholder="Valor"><br>
+        <input type="text" name="titular" required placeholder="Titular"><br>
+        <input type="number" name="cpf" required placeholder="CPF"><br>
+        <input type="number" name="num-cartao" required placeholder="Número do Cartão"><br>
+        <input type="number" name="validade" required placeholder="Validade"><br>
+        <input type="number" name="cvv" required placeholder="CVV"><br>
         <button type="submit">Realizar Doação</button>
     </form>
+    <script src="cartao.js"></script>
 </body>
 </html>
