--- a/codigo/raphael_thierry_coelho/cartao.html
+++ b/codigo/raphael_thierry_coelho/cartao.html
@@ -68,7 +68,9 @@
             </p>
         </div>
         
+        <img src="imgs/logo.png" alt="logo" id="logo-footer">
     </div>
+
 
 </footer>
 </html>
