Alterações js e html

--- a/codigo/larissa_moncao/index.html
+++ b/codigo/larissa_moncao/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PerfilDoador</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Perfil</h1>
     <h2>Pessoal</h2>
-    <h3>Nome: Larissa Monção</h3>
-    <h3>Email: larissa.oliveira@example.com</h3>
-    <h3>Telefone: (38) 99815-4188</h3>
+    <section id="dados-pessoais">
+        <!-- Os dados pessoais do doador serão exibidos aqui -->
+        <h2>Dados Pessoais</h2>
+        <div id="info-doador">Carregando...</div>
+      </section>
+    
+      <section id="doacoes">
+        <h2>Doações</h2>
+        <div id="lista-doacoes">Carregando...</div>
+      </section>
+    <script src="app.js"></script>
 </body>
 </html>
