--- a/codigo/larissa_moncao/index.html
+++ b/codigo/larissa_moncao/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-dark">
+<body class="bg-black text-light">
 
   <div class="container py-5">
     <h1 class="mb-4 text-center">Perfil do Doador</h1>
@@ -15,7 +15,7 @@
     <!-- Dados Pessoais -->
     <section id="dados-pessoais" class="mb-5">
       <h2 class="h4">Dados Pessoais</h2>
-      <div id="info-doador" class="p-3 border rounded bg-dark">Carregando...</div>
+      <div id="info-doador" class="p-3 border rounded">Carregando...</div>
       <div class="mt-">
         <button id="editar" class="btn btn-outline-primary me-2">Editar</button>
         <button id="logout" class="btn btn-outline-secondary">Logout</button>
