Criação do botão de doar e melhoramento da estilização

--- a/codigo/arthur_vieira_lopes/ong.html
+++ b/codigo/arthur_vieira_lopes/ong.html
@@ -30,18 +30,21 @@
                             <div class="foto-redonda"></div>
                         </div>
                         <div class="info-ong">
-                            <h3>ONG Alimentação para Todos</h3>
+                            <h3>ONG Alimentação para Todos <i class="fa-solid fa-check-circle" style="color: #4CAF50;"></i></h3>
                             <p class="bio">“Somos a Alimentação para Todos, uma ONG dedicada a combater a fome e promover a dignidade de famílias em situação de vulnerabilidade. Por meio de doações, parcerias e ações comunitárias, levamos alimentos e esperança a quem mais precisa. Acreditamos que ninguém deve enfrentar o dia com o estômago vazio — e trabalhamos todos os dias para transformar essa realidade.”</p>
 
                             <ul class="detalhes-perfil">
                                 <li><i class="fa-regular fa-calendar-alt" style="color: #4CAF50;"></i> <strong>Entrou em:</strong> Março de 2023</li>
                                 <li><i class="fa-solid fa-location-dot" style="color: #4CAF50;"></i> <strong>Localização:</strong> Belo Horizonte - MG</li>
-                                <li><strong>Projetos ativos:</strong> 12</li>
+                                <li><strong>Famílias ajudadas:</strong> 12</li>
                                 <li><strong>Redes sociais:</strong> 
-                                    <a href="https://instagram.com" target="_blank">Instagram</a> | 
-                                    <a href="https://facebook.com" target="_blank">Facebook</a>
+                                    <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a> | 
+                                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a>
                                 </li>
                             </ul>
+                            <div>
+                                <br><button id="btn-submit" type="submit">Doar</button>
+                            </div>
                         </div>
                     </div>
                 </div>
