--- a/codigo/arthur_vieira_lopes/ong.html
+++ b/codigo/arthur_vieira_lopes/ong.html
@@ -30,8 +30,8 @@
                             <div class="foto-redonda"></div>
                         </div>
                         <div class="info-ong">
-                            <h3>ONG Alimentação para Todos <i class="fa-solid fa-check-circle" style="color: #4CAF50;"></i></h3>
-                            <p class="bio">“Somos a Alimentação para Todos, uma ONG dedicada a combater a fome e promover a dignidade de famílias em situação de vulnerabilidade. Por meio de doações, parcerias e ações comunitárias, levamos alimentos e esperança a quem mais precisa. Acreditamos que ninguém deve enfrentar o dia com o estômago vazio — e trabalhamos todos os dias para transformar essa realidade.”</p>
+                            <h3>ONG Mãos que Alimentam <i class="fa-solid fa-check-circle" style="color: #4CAF50;"></i></h3>
+                            <p class="bio">“Somos a Mãos que Alimentam, uma ONG dedicada a combater a fome e promover a dignidade de famílias em situação de vulnerabilidade. Por meio de doações, parcerias e ações comunitárias, levamos alimentos e esperança a quem mais precisa. Acreditamos que ninguém deve enfrentar o dia com o estômago vazio — e trabalhamos todos os dias para transformar essa realidade.”</p>
 
                             <ul class="detalhes-perfil">
                                 <li><i class="fa-regular fa-calendar-alt" style="color: #4CAF50;"></i> <strong>Entrou em:</strong> Março de 2023</li>
@@ -43,14 +43,14 @@
                                 </li>
                             </ul>
                             <div>
-                                <br><button id="btn-submit" type="submit">Doar</button>
+                                <br><button id="btn-submit" type="button">Doar</button>
+                                <script src="script.js"></script>
                             </div>
                         </div>
                     </div>
                 </div>
             </form>
         </div>
-        <script src="cartao.js"></script>
     </div>
 </body>
 <footer>
