Página de perfil da Ong, feito

--- a/codigo/arthur_vieira_lopes/perfildaong.html
+++ b/codigo/arthur_vieira_lopes/perfildaong.html
@@ -35,7 +35,7 @@
 
                             <ul class="detalhes-perfil">
                                 <li><i class="fa-regular fa-calendar-alt" style="color: #4CAF50;"></i> <strong>Entrou em:</strong> Março de 2023</li>
-                                <li><i class="fa-solid fa-location-dot" style="color: #4CAF50;"></i> <strong>Localização:</strong> Belo Horizonte - MG</li>
+                                <li><i class="fa-solid fa-location-dot" style="color: #4CAF50;"></i> <strong>Localização:</strong> Avenida Afonso Pena, 1234, Centro - Belo Horizonte - MG</li>
                                 <li><strong>Famílias ajudadas:</strong> 12</li>
                                 <li><strong>Redes sociais:</strong> 
                                     <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a> | 
