--- a/codigo/larissa_moncao/index.html
+++ b/codigo/larissa_moncao/index.html
@@ -9,9 +9,9 @@
 </head>
 <body class="bg-white text-black">
     
-  <header class="bg-fundos">
+  <header class="">
     
-    <nav class="navbar navbar-expand-lg navbar-light shadow-sm mb-4">
+    <nav class="navbar navbar-expand-lg bg-fundos shadow-sm mb-4 navbar-rounded-bottom-right">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,12 +43,12 @@
   </div>
   
   
-    <!-- Linha com colunas lado a lado -->
+   
     <div class="row mb-5">
       <div class="row mb-5">
         <!-- Dados Pessoais -->
         <div class="col-md-4 ">
-          <section id="dados-pessoais" class="border rounded p-3 mb-4 bg-fundos">
+          <section id="dados-pessoais" class=" rounded p-3 mb-4 bg-fundos">
             <h2 class="h4 border-bottom border-success">Dados Pessoais</h2>
             <div id="info-doador" class="p-3 rounded">Carregando...</div>
             <div class="mt-3">
@@ -82,7 +82,7 @@
   
     </div>
   </div>
-
+  <!--rodapé-->
   <footer class="text-center py-4 bg-fundos text-dark">
     <p>© 2025 NutriTech</p>
     <p>Projeto Alimentação para Todos</p>
