correcao das opçoes da pagina de cadastro

--- a/codigo/matheus_figueiredo/index.html
+++ b/codigo/matheus_figueiredo/index.html
@@ -26,6 +26,18 @@
         <input type="password" placeholder="Digite a senha" required />
         <input type="password" placeholder="Confirme a senha" required />
         <input type="tel" placeholder="Digite seu telefone" required />
+        <input type="text" placeholder="Digite seu endereço completo" required>
+        <input type="date" placeholder="Data de nascimento" required>
+        <select required>
+          <option value="" disabled selected>Selecione seu gênero</option>
+          <option value="feminino">Feminino</option>
+          <option value="masculino">Masculino</option>
+          <option value="nao_binario">Não-binário</option>
+          <option value="prefiro_nao_dizer">Prefiro não dizer</option>
+          <option value="outro">Outro</option>
+        </select>
+
+
 
         <div class="tipo-usuario">
           
