Alteração feita nos botões e atualização do estilo.

--- a/codigo/arthur_vieira_lopes/perfildaong.html
+++ b/codigo/arthur_vieira_lopes/perfildaong.html
@@ -43,7 +43,9 @@
                                 </li>
                             </ul>
                             <div>
-                                <br><button id="btn-submit" type="button">Doar</button>
+                                <br>
+                                <button id="btn-submit" type="button">Quero Doar Alimentos</button>
+                                <button id="btn-submit-2" type="button">Apoiar Financeiramente</button>
                                 <script src="script.js"></script>
                             </div>
                         </div>
