--- a/codigo/raphael_thierry_coelho/cartao.html
+++ b/codigo/raphael_thierry_coelho/cartao.html
@@ -3,74 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagamento com Cartão</title>
+    <title>Doação com Cartão</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
-<header>
-    <img src="imgs/forma1.png" alt="decoracao-cabecalho" id="forma1">
-    <div id="logo">
-        <img src="imgs/logo.png" alt="Logo"  id="img-logo">
-        <h1>Alimentação<br>Para<br>Todos</h1>
-    </div>
-
-    <a href="https://example.com" class="usuario">
-            <h2>Usuário</h2>
-            <img src="imgs/usuario.png" alt="Usuario" id="img-usuario">
-    </a>
-</header>
 <body>
-    <img src="imgs/forma2.png" alt="decoracao-lateral" id="forma2">
-    <img src="imgs/" alt="">
+    <header class="d-flex justify-content-between align-items-center p-3 bg-light">
+        <a href="#" class="d-flex align-items-center">
+            <img src="imgs/logo.png" alt="Logo" class="logo me-3">
+            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
+        </a>
+        <a href="#" class="usuario-container d-flex align-items-center">
+            <h3 class="m-0 me-2">Usuário</h3>
+            <img src="imgs/usuario.png" alt="Usuário" class="usuario">
+        </a>
+    </header>
+
+    <main>
     <div id="pagina">
-    <div class="container">
-        <h3>Pagamento com Cartão</h3>
-        <form id="form-cartao">
-            <input type="text" name="valor" required placeholder="Valor" oninput="this.value = this.value.replace(/[^0-9.,\-\s]/g, '')"><br>
-            <input type="text" name="titular" required placeholder="Titular"><br>
-            <input type="text" name="cpf" required placeholder="CPF" maxlength="14" oninput="this.value = this.value.replace(/[^0-9.\-\s]/g, '')"><br>
-            <input type="text" name="num-cartao" required placeholder="Número do Cartão" maxlength="19" oninput="this.value = this.value.replace(/[^0-9.\-\s]/g, '')"><br>
-            <input type="text" name="validade" required placeholder="Validade" maxlength="7" oninput="this.value = this.value.replace(/[^0-9.\-\s\/]/g, '')"><br>
-            <input type="text" name="cvv" required placeholder="CVV" maxlength="3" oninput="this.value = this.value.replace(/[^0-9.\-\s]/g, '')"><br>
+        <div class="container-pagina">
+            <h4 id="titulo-pagina">Pagamento com Cartão</h4>
+            <form id="form-cartao">
+                <input type="text" name="valor" required placeholder="Valor" oninput="this.value = this.value.replace(/[^0-9.,\-\s]/g, '')"><br>
+                <input type="text" name="titular" required placeholder="Titular"><br>
+                <input type="text" name="cpf" required placeholder="CPF" maxlength="14" oninput="this.value = this.value.replace(/[^0-9.\-\s]/g, '')"><br>
+                <input type="text" name="num-cartao" required placeholder="Número do Cartão" maxlength="19" oninput="this.value = this.value.replace(/[^0-9.\-\s]/g, '')"><br>
+                <input type="text" name="validade" required placeholder="Validade" maxlength="7" oninput="this.value = this.value.replace(/[^0-9.\-\s\/]/g, '')"><br>
+                <input type="text" name="cvv" required placeholder="CVV" maxlength="3" oninput="this.value = this.value.replace(/[^0-9.\-\s]/g, '')"><br>
 
-            <div class="tipo-cartao">
-                <div>
-                    <input type="radio" name="buttonGroup" id="button1" class="toggle-btn">
-                    <label for="button1">Débito</label>
-                </div>
+                <div class="tipo-cartao">
+                    <div>
+                        <input type="radio" name="buttonGroup" id="button1" class="toggle-btn">
+                        <label for="button1">Débito</label>
+                    </div>
         
-                <div>
-                    <input type="radio" name="buttonGroup" id="button2" class="toggle-btn">
-                    <label for="button2">Crédito</label>
+                    <div>
+                        <input type="radio" name="buttonGroup" id="button2" class="toggle-btn">
+                        <label for="button2">Crédito</label>
+                    </div>
                 </div>
-            </div>
-            <button id="btn-submit" type="submit">Realizar Doação</button>
-        </form>
+                <button id="btn-submit" type="submit">Realizar Doação</button>
+            </form>
+        </div>
     </div>
+    </main>
     <script src="cartao.js"></script>
-</div>
 </body>
-<footer>
-    <img src="imgs/forma3.png" alt="decoracao-rodape1" id="forma3">
-    <img src="imgs/forma4.png" alt="decoracao-rodape2" id="forma4">
 
-    <div id="informacoes">
 
-        <div id="inf-contato">
-            <h4>Contato</h4>
-            <p>(31) 9999-6666<br>
-            nutritech@pucminas.com.br
-            </p>
+    <footer class="bg-light py-4">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="footer-left text-center text-md-start">
+                <h3 class="mb-2">Local</h3>
+                <p>Belo Horizonte</p>
+            </div>
+
+            <div class="footer-center text-center">
+                <p>© 2025 NutriTech</p>
+            </div>
+
+            <div class="footer-right text-center text-md-end">
+                <h3 class="mb-2">Contato</h3>
+                <p class="mb-1">(31) 9999-6666</p>
+                <p>nutritech@pucminas.com.br</p>
+            </div>
         </div>
+    </footer>
 
-        <div id="inf-local">
-            <h5>Local</h5>
-            <p>Belo Horizonte - MG   
-            </p>
-        </div>
-        
-        <img src="imgs/logo.png" alt="logo" id="logo-footer">
-    </div>
-
-
-</footer>
 </html>
