--- a/codigo/matheus_figueiredo/index.html
+++ b/codigo/matheus_figueiredo/index.html
@@ -7,14 +7,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="top-banner">
-    <div class="logo">
-      <img src="logo.png" alt="Logo" /> 
-      <div class="textos">
-        <h1>Alimentação<br>Para Todos</h1>
-      </div>
-    </div>
-  </header>
+  <header class="d-flex justify-content-between align-items-center p-3 bg-light">
+        <a href="#" class="d-flex align-items-center">
+            <img src="logo.png" alt="Logo" class="logo me-3">
+            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
+        </a>
+        <a href="#" class="usuario-container d-flex align-items-center">
+            <h3 class="m-0 me-2">Usuário</h3>
+            <img src="usuario.png" alt="Usuário" class="usuario">
+        </a>
+    </header>
+
 
   <main>
     <section class="form-section">
@@ -49,20 +52,24 @@
     </section>
   </main>
 
-  <footer>
-    <div class="footer-content">
-      <div>
-        <p><strong>Contato</strong><br>
-        (31) 9999-6666<br>
-        nutritech@pucminas.com.br</p>
-      </div>
-      <div>
-        <p><strong>Local</strong><br>
-        Belo Horizonte - MG</p>
-      </div>
-      
-    </div>
-  </footer>
+  <footer class="bg-light py-4">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="footer-left text-center text-md-start">
+                <h3 class="mb-2">Local</h3>
+                <p>Belo Horizonte</p>
+            </div>
+
+            <div class="footer-center text-center">
+                <p>© 2025 NutriTech</p>
+            </div>
+
+            <div class="footer-right text-center text-md-end">
+                <h3 class="mb-2">Contato</h3>
+                <p class="mb-1">(31) 9999-6666</p>
+                <p>nutritech@pucminas.com.br</p>
+            </div>
+        </div>
+    </footer>
 
   <script src="script.js"></script>
 </body>
