--- a/codigo/artur_de_figueiredo_neves/ranking.html
+++ b/codigo/artur_de_figueiredo_neves/ranking.html
@@ -9,41 +9,45 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <header class="position-relative d-flex justify-content-between align-items-center p-3">
-    <img src="imgs/forma1.png" alt="decoracao-cabecalho" class="position-absolute top-0 start-0 w-100" style="z-index: -1;" />
-    
-    <div id="logo" class="d-flex align-items-center text-white">
-      <img src="imgs/logo.png" alt="Logo" id="img-logo" class="me-3" style="width: 80px;" />
-      <h1 class="m-0 fs-5">Alimentação<br>Para<br>Todos</h1>
-    </div>
-
-    <a href="https://example.com" class="text-decoration-none d-flex align-items-center text-dark">
-      <h2 class="me-3 mb-0 fs-6">Usuário</h2>
-      <img src="imgs/usuario.png" alt="Usuario" id="img-usuario" class="d-block" style="width: 50px;" />
+  
+  <header class="d-flex justify-content-between align-items-center p-3" style="background-color: #4CAF50; color: white;">
+    <a href="#" class="d-flex align-items-center">
+      <img src="imgs/logo.png" alt="Logo" class="logo me-3">
+      <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
+    </a>
+    <a href="#" class="usuario-container d-flex align-items-center">
+      <h3 class="m-0 me-2">Usuário</h3>
+      <img src="imgs/usuario.png" alt="Usuário" class="usuario">
     </a>
   </header>
 
+
   <main class="container my-5">
     <div class="text-center mb-4">
-      <h3 class="display-5">Ranking Mensal</h3>
+      <h3 class="display-5" style="color: #4CAF50;">Ranking Mensal</h3>
     </div>
 
     <ul id="ranking-list" class="list-unstyled">
-      <!-- Aqui vão os itens do ranking -->
+      
     </ul>
   </main>
 
-  <footer class="bg-transparent text-white py-4 position-relative">
-    <img src="imgs/forma3.png" alt="decoracao-rodape1" class="position-absolute start-0 bottom-0 w-100" style="z-index: -1;" />
 
-    <div class="container d-md-flex justify-content-between text-center text-md-start">
-      <div class="mb-3 mb-md-0">
-        <h4>Contato</h4>
-        <p>(31) 9999-6666<br />nutritech@pucminas.com.br</p>
+  <footer class="py-4" style="background-color: #4CAF50; color: white;">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="footer-left text-center text-md-start">
+        <h3 class="mb-2">Local</h3>
+        <p>Belo Horizonte</p>
       </div>
-      <div>
-        <h5>Local</h5>
-        <p>Belo Horizonte - MG</p>
+
+      <div class="footer-center text-center">
+        <p>© 2025 NutriTech</p>
+      </div>
+
+      <div class="footer-right text-center text-md-end">
+        <h3 class="mb-2">Contato</h3>
+        <p class="mb-1">(31) 9999-6666</p>
+        <p>nutritech@pucminas.com.br</p>
       </div>
     </div>
   </footer>
