--- a/codigo/Guilherme_Bittencourt/index.html
+++ b/codigo/Guilherme_Bittencourt/index.html
@@ -23,14 +23,14 @@
     </style>
 </head>
 <body>
-    <header>
-        <a href="#">
-            <img src="imgs/logo.png" alt="Logo" class="px-3 logo">
-            <h2>Alimentação <br> Para <br> Todos</h2>
+    <header class="d-flex justify-content-between align-items-center p-3 bg-light">
+        <a href="#" class="d-flex align-items-center">
+            <img src="imgs/logo.png" alt="Logo" class="logo me-3">
+            <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
-        <a href="#" class="usuario-container">
-            <h3>usuário</h3>
-            <img src="imgs/usuario.png" alt="Usuário" class="usuario px-3">
+        <a href="#" class="usuario-container d-flex align-items-center">
+            <h3 class="m-0 me-2">Usuário</h3>
+            <img src="imgs/usuario.png" alt="Usuário" class="usuario">
         </a>
     </header>
 
@@ -59,19 +59,23 @@
         <div id="map"></div>
     </main>
 
-    <footer>
-        <div class="footer-info px-5">
-            <div>
-                <h3>Contato</h3>
-                <p>(31) 9999-6666</p>
-                <p>nutritech@pucminas.com.br</p>
-            </div>
-            <div class="px-5">
-                <h3>Local</h3>
+    <footer class="bg-light py-4">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="footer-left text-center text-md-start">
+                <h3 class="mb-2">Local</h3>
                 <p>Belo Horizonte</p>
             </div>
+
+            <div class="footer-center text-center">
+                <p>© 2025 NutriTech</p>
+            </div>
+
+            <div class="footer-right text-center text-md-end">
+                <h3 class="mb-2">Contato</h3>
+                <p class="mb-1">(31) 9999-6666</p>
+                <p>nutritech@pucminas.com.br</p>
+            </div>
         </div>
-        <img src="imgs/logo.png" alt="Logo" class="logo">
     </footer>
 
     <script>
