--- a/codigo/arthur_vieira_lopes/perfildaong.html
+++ b/codigo/arthur_vieira_lopes/perfildaong.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div class="wrapper">
 <header class="d-flex justify-content-between align-items-center p-3 bg-light">
         <a href="#" class="d-flex align-items-center">
             <img src="imgs/logo.png" alt="Logo" class="logo me-3">
@@ -21,36 +23,36 @@
 </header>
 <main>
     <div class="container">
-    <h1>Student Profile Page Design Example</h1>
-    <p class="subtitle">A responsive student profile page design.</p>
+    <h1></h1>
+    <p class="subtitle"></p>
 
     <div class="profile">
       <div class="card profile-info">
-        <img src="fotoong.png" alt="Foto do Aluno" class="profile-pic" />
-        <h2>Ishmam Ahasan Samin</h2>
-        <p><strong>Student ID:</strong> 321000001</p>
-        <p><strong>Class:</strong> 4</p>
-        <p><strong>Section:</strong> A</p>
+        <img src="imgs/fotoong.png" alt="Foto do Aluno" class="profile-pic" />
+        <h2>ONG Alimentar com Amor</h2>
+        <p><strong>Entrou em:</strong> 2025</p>
+        <p><strong>CNPJ:</strong> 12.345.678/0001-95</p>
+        <p><strong>Contato:</strong> (31) 91234-5678</p>
       </div>
 
       <div class="card details">
-        <h3><i class="fa fa-info-circle"></i> General Information</h3>
+        <h3><i class="fa fa-info-circle"></i> Informações Gerais</h3>
         <table>
+          <tr><td>Fundada em</td><td>:</td><td>2018</td></tr>
           <tr><td>Famílias ajudadas</td><td>:</td><td>125</td></tr>
-          <tr><td>Entrou em</td><td>:</td><td>2025</td></tr>
-          <tr><td>Gender</td><td>:</td><td>Male</td></tr>
-          <tr><td>Religion</td><td>:</td><td>Group</td></tr>
-          <tr><td>Blood</td><td>:</td><td>B+</td></tr>
+          <tr><td>Voluntários envolvidos</td><td>:</td><td>200</td></tr>
+          <tr><td>Colaboradores mensais</td><td>:</td><td>42</td></tr>
         </table>
 
         <div class="card extra">
-          <h3><i class="fa fa-comment"></i> Other Information</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua...</p>
+          <h3><i class="fa fa-comment"></i> Descrição</h3>
+          <p>A Alimentar com Amor é uma organização sem fins lucrativos dedicada a combater a fome e a insegurança alimentar em comunidades em situação de vulnerabilidade.</p>
         </div>
       </div>
     </div>
   </div>
 </main>
+</div>
 <footer class="bg-light py-4">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="footer-left text-center text-md-start">
@@ -68,7 +70,7 @@
                 <p>nutritech@pucminas.com.br</p>
             </div>
         </div>
-</footer>
+    </footer>
 </body>
 
 </html>
