--- a/codigo/larissa_moncao/index.html
+++ b/codigo/larissa_moncao/index.html
@@ -26,7 +26,7 @@
   <div class="container py-5">
     <div class=" d-flex justify-content-center align-items-center flex-column mb-4">
       <img id="foto-doador" src="/codigo/assets/imgs/usuario.png" alt="Foto do Doador" class="rounded-circle mb-4 img-fluid ms-3 d-block mt-6 d p-6" style="width: 90px;">
-      <h1 class="mb-4 text-right ">Perfil do Doador</h1>
+      <h1 class="mb-4 text-right ">Larissa Monção</h1>
   </div>
   
   
@@ -35,12 +35,14 @@
       <div class="row mb-5">
         <!-- Dados Pessoais -->
         <div class="col-md-4 ">
-          <section id="dados-pessoais" class=" rounded p-3 mb-4 bg-fundos">
+          <section id="dados-pessoais" class=" rounded p-3 mb-4 shadow">
+            <div class="shadow-sm p-3 mb-1 bg-body">
             <h2 class="h4 border-bottom border-success">Dados Pessoais</h2>
             <div id="info-doador" class="p-3 rounded">Carregando...</div>
             <div class="mt-3">
               <button id="editar" class="btn btn-verde rounded-pill px-4 py-2 shadow">Editar</button>
               <button id="logout" class="btn btn-verde rounded-pill px-4 py-2 shadow">Logout</button>
+            </div>
             </div>
           </section>
         </div>
@@ -48,8 +50,8 @@
         <!-- Lista Doações -->
         <div class="col-md-8">
           <section id="doacoes">
-            <h2 class="h4 text-center border-bottom border-success pb-2 mb-4">Doações já realizadas por você</h2>
-            <div id="lista-doacoes" class="p-3">Carregando...</div>
+            <h2 class="h4 text-center pb-2 mb-4">Doações já realizadas por você</h2>
+            <div id="lista-doacoes" class="p-3 rounded-4 shadow">Carregando...</div>
           </section>
         </div>
       </div>
