--- a/codigo/larissa_moncao/index.html
+++ b/codigo/larissa_moncao/index.html
@@ -15,7 +15,7 @@
             <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <a href="#" class="usuario-container d-flex align-items-center">
-            <h3 class="m-0 me-2">Usuário</h3>
+            <h3 class="m-0 me-2">Larissa</h3>
             <img src="/codigo/assets/imgs/usuario.png" alt="Usuário" class="usuario">
         </a>
     </header>
@@ -50,7 +50,7 @@
         <!-- Lista Doações -->
         <div class="col-md-8">
           <section id="doacoes">
-            <h2 class="h4 text-center pb-2 mb-4">Doações já realizadas por você</h2>
+            <h2 class="h4 text-center mb-4 border-bottom border-success border-2 pb-2">Doações já realizadas por você</h2>
             <div id="lista-doacoes" class="p-3 rounded-4 shadow">Carregando...</div>
           </section>
         </div>
