--- a/codigo/raphael_thierry_coelho/cartao.html
+++ b/codigo/raphael_thierry_coelho/cartao.html
@@ -25,12 +25,12 @@
         <div class="container-pagina">
             <h4 id="titulo-pagina">Pagamento com Cartão</h4>
             <form id="form-cartao">
-                <input type="text" name="valor" required placeholder="Valor" oninput="this.value = this.value.replace(/[^0-9.,\-\s]/g, '')"><br>
-                <input type="text" name="titular" required placeholder="Titular"><br>
-                <input type="text" name="cpf" required placeholder="CPF" maxlength="14" oninput="this.value = this.value.replace(/[^0-9.\-\s]/g, '')"><br>
-                <input type="text" name="num-cartao" required placeholder="Número do Cartão" maxlength="19" oninput="this.value = this.value.replace(/[^0-9.\-\s]/g, '')"><br>
-                <input type="text" name="validade" required placeholder="Validade" maxlength="7" oninput="this.value = this.value.replace(/[^0-9.\-\s\/]/g, '')"><br>
-                <input type="text" name="cvv" required placeholder="CVV" maxlength="3" oninput="this.value = this.value.replace(/[^0-9.\-\s]/g, '')"><br>
+                <input type="text" id="valor" name="valor" required placeholder="Valor $" ><br>
+                <input type="text" id="titular" name="titular" required placeholder="Titular" oninput="this.value = this.value.replace(/[^a-zA-ZÀ-ú\s]/g, '')"><br>
+                <input type="text" id="cpf" name="cpf" required placeholder="CPF" maxlength="14"><br>
+                <input type="text" id="num-cartao" name="num-cartao" required placeholder="Número do Cartão" maxlength="19"><br>
+                <input type="text" id="validade" name="validade" required placeholder="Validade" maxlength="7"><br>
+                <input type="text" id="cvv" name="cvv" required placeholder="CVV" maxlength="3"><br>
 
                 <div class="tipo-cartao">
                     <div>
@@ -49,6 +49,45 @@
     </div>
     </main>
     <script src="cartao.js"></script>
+    <script src="https://unpkg.com/imask"></script>
+    <script>
+  // Mascaras de input 
+  // Valor
+  IMask(document.getElementById('valor'), {
+  mask: 'R$ num',
+  blocks: {
+    num: {
+      mask: Number,
+      scale: 2,
+      signed: false,
+      thousandsSeparator: '.',
+      padFractionalZeros: true,
+      radix: ',',
+      mapToRadix: ['.']
+    }
+  }
+});
+
+  // CPF
+  IMask(document.getElementById('cpf'), {
+    mask: '000.000.000-00'
+  });
+
+  // Número do Cartão
+  IMask(document.getElementById('num-cartao'), {
+    mask: '0000 0000 0000 0000'
+  });
+
+  // Validade (MM/AAAA)
+  IMask(document.getElementById('validade'), {
+    mask: '00/0000'
+  });
+
+  // CVV
+  IMask(document.getElementById('cvv'), {
+    mask: '000'
+  });
+</script>
 </body>
 
 
