Criação do Cartão Visual

--- a/codigo/raphael_thierry_coelho/cartao.html
+++ b/codigo/raphael_thierry_coelho/cartao.html
@@ -46,6 +46,12 @@
                 <button id="btn-submit" type="submit">Realizar Doação</button>
             </form>
         </div>
+        <div class="cartao-visual">
+            <div class="numero-cartao" id="vis-numero">0000 0000 0000 0000</div>
+            <div class="nome-cartao" id="vis-nome">NOME DO TITULAR</div>
+            <div class="validade-cartao" id="vis-validade">MM/AAAA</div>
+            <div id="faixa-cartao"></div>
+        </div>
     </div>
     </main>
     <script src="cartao.js"></script>
