--- a/codigo/raphael_thierry_coelho/cartao.html
+++ b/codigo/raphael_thierry_coelho/cartao.html
@@ -21,38 +21,45 @@
     </header>
 
     <main>
-    <div id="pagina">
-        <div class="container-pagina">
-            <h4 id="titulo-pagina">Pagamento com Cartão</h4>
-            <form id="form-cartao">
-                <input type="text" id="valor" name="valor" required placeholder="Valor $" ><br>
-                <input type="text" id="titular" name="titular" required placeholder="Titular" oninput="this.value = this.value.replace(/[^a-zA-ZÀ-ú\s]/g, '')"><br>
-                <input type="text" id="cpf" name="cpf" required placeholder="CPF" maxlength="14"><br>
-                <input type="text" id="num-cartao" name="num-cartao" required placeholder="Número do Cartão" maxlength="19"><br>
-                <input type="text" id="validade" name="validade" required placeholder="Validade" maxlength="7"><br>
-                <input type="text" id="cvv" name="cvv" required placeholder="CVV" maxlength="3"><br>
-
-                <div class="tipo-cartao">
-                    <div>
-                        <input type="radio" name="buttonGroup" id="button1" class="toggle-btn">
-                        <label for="button1">Débito</label>
+        <div id="pagina">
+            <div class="container-pagina">
+                <h4 id="titulo-pagina">Pagamento com Cartão</h4>          
+                <form id="form-cartao">
+                    <div id="container-dados">
+                        Valor
+                        <input type="text" id="valor" name="valor" required placeholder="R$___,__" ><br>
+                        Titular
+                        <input type="text" id="titular" name="titular" required placeholder="Titular" oninput="this.value = this.value.replace(/[^a-zA-ZÀ-ú\s]/g, '')"><br>
+                        CPF
+                        <input type="text" id="cpf" name="cpf" required placeholder="___.___.___-__" maxlength="14"><br>
+                        Número do Cartão
+                        <input type="text" id="num-cartao" name="num-cartao" required placeholder="____ ____ ____ ____" maxlength="19"><br>
+                        Validade
+                        <input type="text" id="validade" name="validade" required placeholder="MM/AAAA" maxlength="7"><br>
+                        Código de Segurança
+                        <input type="text" id="cvv" name="cvv" required placeholder="CVV" maxlength="3"><br>
                     </div>
+                    <div class="tipo-cartao">
+                        <div>
+                            <input type="radio" name="buttonGroup" id="button1" class="toggle-btn">
+                            <label for="button1">Débito</label>
+                        </div>
         
-                    <div>
-                        <input type="radio" name="buttonGroup" id="button2" class="toggle-btn">
-                        <label for="button2">Crédito</label>
+                        <div>
+                            <input type="radio" name="buttonGroup" id="button2" class="toggle-btn">
+                            <label for="button2">Crédito</label>
+                        </div>
                     </div>
-                </div>
-                <button id="btn-submit" type="submit">Realizar Doação</button>
-            </form>
+                    <button id="btn-submit" type="submit">Realizar Doação</button>
+                </form>
+            </div>
+            <div class="cartao-visual">
+                <div class="numero-cartao" id="vis-numero">0000 0000 0000 0000</div>
+                <div class="nome-cartao" id="vis-nome">NOME DO TITULAR</div>
+                <div class="validade-cartao" id="vis-validade">MM/AAAA</div>
+                <div id="faixa-cartao"></div>
+            </div>
         </div>
-        <div class="cartao-visual">
-            <div class="numero-cartao" id="vis-numero">0000 0000 0000 0000</div>
-            <div class="nome-cartao" id="vis-nome">NOME DO TITULAR</div>
-            <div class="validade-cartao" id="vis-validade">MM/AAAA</div>
-            <div id="faixa-cartao"></div>
-        </div>
-    </div>
     </main>
     <script src="cartao.js"></script>
     <script src="https://unpkg.com/imask"></script>
