Alterações estilo botão lateral

--- a/codigo/larissa_moncao/index.html
+++ b/codigo/larissa_moncao/index.html
@@ -15,7 +15,7 @@
             <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <a href="#" class="usuario-container d-flex align-items-center">
-            <h3 class="m-0 me-2">Larissa</h3>
+            <h3 class="m-0 me-2">Usuario</h3>
             <img src="../assets/imgs/usuario.png" alt="Usuário" class="usuario">
         </a>
     </header>
@@ -26,7 +26,7 @@
   <div class="container py-5">
     <div class=" d-flex justify-content-center align-items-center flex-column mb-4">
       <img id="foto-doador" src="../assets/imgs/usuario.png" alt="Foto do Doador" class="rounded-circle mb-4 img-fluid ms-3 d-block mt-6 d p-6" style="width: 90px;">
-      <h1 class="mb-4 text-right ">Larissa Monção</h1>
+      <h1 class="mb-4 text-right ">Usuario</h1>
   </div>
   
   
@@ -48,14 +48,14 @@
         <div class="rounded-1 shadow-sm p-3 mb-1">
           <div class="shadow  align-items-center p-3">
           <!-- Botão de gerenciar recorrência-->
-            <section id="doacoes-recorrentes" class="col-md-11 align-items-center justify-content-center">
+            <section id="doacoes-recorrentes" class="align-items-center justify-content-center ">
               
-              <p class="h5 text-center pb-2">Veja aqui sobre suas doações recorrentes</p>
-              <button id="gerenciar-recorrencia" class="btn bg-verde-fundo rounded-pill shadow w-100 text-light">Gerenciar Doações Recorrentes</button>
+              <p id="gestao" class="h5 text-center pb-2 mb-2">Veja aqui sobre suas doações recorrentes</p>
+              <button id="gerenciar-recorrencia" class="btn bg-verde-fundo w-100 rounded-pill px-3 py-6 shadow text-light ">Gerenciar Doações Recorrentes</button>
             </section>
             <!--Botão nova doação-->
-            <section id="doar" class="col-md-4 col-md-11">
-              <p class="h5 text-center pb-2 mb-4">Faça uma nova doação aqui e ajude uma várias pessoas necessitadas</p>
+            <section id="doar" class="py-3">
+              <p id="gestao" class="h5 text-center pb-2 mb-2">Faça uma nova doação</p>
               <button id="nova-doacao" class="btn bg-verde-fundo w-100 rounded-pill px-3 py-6 shadow text-light ">Nova Doação</button>
             </section>
           </div>
