--- a/codigo/artur_de_figueiredo_neves/ranking.html
+++ b/codigo/artur_de_figueiredo_neves/ranking.html
@@ -11,11 +11,11 @@
 <body>
   
   <header class="d-flex justify-content-between align-items-center p-3" style="background-color: #4CAF50; color: white;">
-    <a href="#" class="d-flex align-items-center">
+    <a href="#" class="d-flex align-items-center text-white text-decoration-none">
       <img src="imgs/logo.png" alt="Logo" class="logo me-3">
       <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
     </a>
-    <a href="#" class="usuario-container d-flex align-items-center">
+    <a href="#" class="usuario-container d-flex align-items-center text-white text-decoration-none">
       <h3 class="m-0 me-2">Usuário</h3>
       <img src="imgs/usuario.png" alt="Usuário" class="usuario">
     </a>
