Alinhamento dos cards de descrição e informações gerais, atualização do estilo

--- a/codigo/arthur_vieira_lopes/perfildaong.html
+++ b/codigo/arthur_vieira_lopes/perfildaong.html
@@ -22,11 +22,12 @@
         </a>
 </header>
 <main>
-    <div class="container">
+  <div class="container">
     <h1></h1>
     <p class="subtitle"></p>
 
     <div class="profile">
+      <!-- Coluna da esquerda -->
       <div class="card profile-info">
         <img src="imgs/fotoong.png" alt="Foto do Aluno" class="profile-pic" />
         <h2>ONG Alimentar com Amor</h2>
@@ -35,23 +36,29 @@
         <p><strong>Contato:</strong> (31) 91234-5678</p>
       </div>
 
-      <div class="card details">
-        <h3><i class="fa fa-info-circle"></i> Informações Gerais</h3>
-        <table>
-          <tr><td>Fundada em</td><td>:</td><td>2018</td></tr>
-          <tr><td>Famílias ajudadas</td><td>:</td><td>125</td></tr>
-          <tr><td>Voluntários envolvidos</td><td>:</td><td>200</td></tr>
-          <tr><td>Colaboradores mensais</td><td>:</td><td>42</td></tr>
-        </table>
+      <!-- Coluna da direita com dois cards empilhados -->
+      <div class="right-column">
+        <div class="card details">
+          <h3><i class="fa fa-info-circle"></i> Informações Gerais</h3>
+          <table>
+            <tr><td>Fundada em</td><td>:</td><td>2018</td></tr>
+            <tr><td>Famílias ajudadas</td><td>:</td><td>125</td></tr>
+            <tr><td>Voluntários envolvidos</td><td>:</td><td>200</td></tr>
+            <tr><td>Colaboradores mensais</td><td>:</td><td>42</td></tr>
+          </table>
+        </div>
 
         <div class="card extra">
           <h3><i class="fa fa-comment"></i> Descrição</h3>
-          <p>A Alimentar com Amor é uma organização sem fins lucrativos dedicada a combater a fome e a insegurança alimentar em comunidades em situação de vulnerabilidade.</p>
+          <p>
+            A Alimentar com Amor é uma organização sem fins lucrativos dedicada a combater a fome e a insegurança alimentar em comunidades em situação de vulnerabilidade.
+          </p>
         </div>
       </div>
     </div>
   </div>
 </main>
+
 </div>
 <footer class="bg-light py-4">
         <div class="container d-flex justify-content-between align-items-center">
