--- a/codigo/arthur_vieira_lopes/perfildaong.html
+++ b/codigo/arthur_vieira_lopes/perfildaong.html
@@ -56,6 +56,11 @@
         </div>
       </div>
     </div>
+    <div class="button-group">
+    <button class="btn-doar">Doar Dinheiro</button>
+    <button class="btn-doar">Doar Alimento</button>
+    </div>
+
   </div>
 </main>
 
