--- a/codigo/larissa_moncao/public/index.html
+++ b/codigo/larissa_moncao/public/index.html
@@ -11,12 +11,12 @@
     
   <header class="d-flex justify-content-between align-items-center p-3 bg-light">
         <a href="#" class="d-flex align-items-center">
-            <img src="/codigo/assets/imgs/logo.png" alt="Logo" class="logo me-3">
+            <img src="img/logo.png" alt="Logo" class="logo me-3">
             <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <a href="#" class="usuario-container d-flex align-items-center">
             <h3 class="m-0 me-2">Usuario</h3>
-            <img src="../assets/imgs/usuario.png" alt="Usuário" class="usuario">
+            <img src="img/usuario.png" alt="Usuário" class="usuario">
         </a>
     </header>
 
@@ -25,7 +25,7 @@
   
   <div class="container py-5">
     <div class=" d-flex justify-content-center align-items-center flex-column mb-4">
-      <img id="foto-doador" src="../assets/imgs/usuario.png" alt="Foto do Doador" class="rounded-circle mb-4 img-fluid ms-3 d-block mt-6 d p-6" style="width: 90px;">
+      <img id="foto-doador" src="img/usuario.png" alt="Foto do Doador" class="rounded-circle mb-4 img-fluid ms-3 d-block mt-6 d p-6" style="width: 90px;">
       <h1 class="mb-4 text-right ">Usuario</h1>
   </div>
   
