Implementação do Formulário de Cadastro

--- a/codigo/raphael_thierry_coelho/cartao/cartao.html
+++ b/codigo/raphael_thierry_coelho/cartao/cartao.html
@@ -11,12 +11,12 @@
 <body>
     <header class="d-flex justify-content-between align-items-center p-3 bg-light">
         <a href="#" class="d-flex align-items-center">
-            <img src="imgs/logo.png" alt="Logo" class="logo me-3">
+            <img src="../imgs/logo.png" alt="Logo" class="logo me-3">
             <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <a href="#" class="usuario-container d-flex align-items-center">
             <h3 class="m-0 me-2">Usuário</h3>
-            <img src="imgs/usuario.png" alt="Usuário" class="usuario">
+            <img src="../imgs/usuario.png" alt="Usuário" class="usuario">
         </a>
     </header>
 
